--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-69411900-1', 'auto');
+  ga('create', '{{ site.googleanalytics }}', 'auto');
   ga('send', 'pageview');
 
 </script>
