RF: make consistent use of baseurl, avoid replace '//','/'

--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,5 +1,5 @@
 <a href="http://neuroimaging.tumblr.com">Blog</a>
-<a href="{{ site.baseurl }}help.html">Help</a>
-<a href="{{ site.baseurl }}conduct.html">Conduct</a>
-<a href="{{ site.baseurl }}contribute.html">Contribute</a>
+<a href="{{ '/help.html' | prepend: site.baseurl }}">Help</a>
+<a href="{{ '/conduct.html' | prepend: site.baseurl }}">Conduct</a>
+<a href="{{ '/contribute.html' | prepend: site.baseurl }}">Contribute</a>
 
