--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,18 +5,18 @@
 	<meta name="generator" content="Jekyll">
 
 	<title>{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-       
+
        <!-- JS -->
        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script> 
-       <script src="{{ "js/tipsy.js" | prepend: site.baseurl }}"></script>
-       
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+       <script src="{{ '/js/tipsy.js' | prepend: site.baseurl }}"></script>
+
 
 	<!-- CSS & fonts -->
-       <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl }}">
-       <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+       <link rel="stylesheet" href="{{ '/css/bootstrap.min.css' | prepend: site.baseurl }}">
+       <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 
