BF: homepage links were not working with CircleCI

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         {% if paginator.total_pages > 1 %}
             <div class="pagination">
             {% if paginator.previous_page == 1 %}
-            <a href="{{ '/' | prepend: site.baseurl }}" class="page-item">&laquo;</a>
+            <a href="{{ '/index.html' | prepend: site.baseurl }}" class="page-item">&laquo;</a>
             {% elsif paginator.previous_page%}
             <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}" class="page-item">&laquo;</a>
             {% else %}
@@ -38,7 +38,7 @@
                 {% if page == paginator.page %}
                 <span class="page-item">{{ page }}</span>
                 {% elsif page == 1 %}
-                <a href="{{ '/' | prepend: site.baseurl }}" class="page-item">{{ page }}</a>
+                <a href="{{ '/index.html' | prepend: site.baseurl }}" class="page-item">{{ page }}</a>
                 {% else %}
                 <a href="{{ site.paginate_path | prepend: site.baseurl | replace: ':num', page }}" class="page-item">{{ page }}</a>
                 {% endif %}
