--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <nav {% if site.reverse == true %}id="nav-left"{% else %}id="nav"{% endif %}>
 
     <div id="nav-list">
-        <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
+        <a href="{{ '/index.html' | prepend: site.baseurl }}">Home</a>
 
         <!-- Nav pages -->
         <a href="#projects" class="list-group-item list-group-item" data-toggle="collapse">Projects <i class="fa fa-caret-down"></i></a>
