--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,4 +1,4 @@
-<a href="http://neuroimaging.tumblr.com">Blog</a>
+<a href="https://neuroimaging.tumblr.com">Blog</a>
 <a href="{{ '/help.html' | prepend: site.baseurl }}">Help</a>
 <a href="{{ '/conduct.html' | prepend: site.baseurl }}">Conduct</a>
 <a href="{{ '/workshops' | prepend: site.baseurl }}">Workshops</a>
